adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -105,6 +105,7 @@
       "columnid",
       "columnname",
       "commerceapi",
+      "COMMERCERATETYPE",
       "companyid",
       "complapi",
       "cond",
@@ -262,6 +263,7 @@
       "imgix",
       "impid",
       "imtoken",
+      "infographic",
       "inlinesvg",
       "inputurl",
       "inservicerequired",
@@ -354,6 +356,7 @@
       "neoclide",
       "neovim",
       "Neue",
+      "newfeature",
       "newguid",
       "newpassword",
       "newrelic",
@@ -377,6 +380,7 @@
       "OPENMEDIUM",
       "OPENSMALL",
       "opentype",
+      "ordermode",
       "ordersapi",
       "organizationattributes",
       "organizationtypes",
@@ -426,6 +430,7 @@
       "profitsetting",
       "profitsettings",
       "protracking",
+      "provaccountcode",
       "providercode",
       "PROVIDERCONTRACTID",
       "providerid",
@@ -440,6 +445,7 @@
       "pynvim",
       "pythonx",
       "qstring",
+      "querystringify",
       "quoteid",
       "quoteids",
       "quotesasrates",
@@ -485,6 +491,7 @@
       "sallyapi",
       "satd",
       "sbuffer",
+      "scrollable",
       "SDQVQ",
       "seayou",
       "secretanswer",
@@ -657,6 +664,7 @@
       "yats",
       "yggdroot",
       "YSLV",
+      "YYMMDD",
       "Zeyada",
       "zjgpj",
       "zoneid",
