adds tmux plugin manager install note

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -181,4 +181,5 @@ set -g @continuum-save-interval '1' # minutes (default is 15)
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Note: This won't run unless you've already executed: git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 run -b '~/.tmux/plugins/tpm/tpm'
