adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -100,6 +100,7 @@
       "COBUYERCONTRACTSIGNATURE",
       "COBUYERSIGNATURE",
       "COCLIENTSIGNATURE",
+      "codelyzer",
       "cohama",
       "COLORTERM",
       "columnid",
@@ -150,6 +151,7 @@
       "deref",
       "Descr",
       "devisionid",
+      "devkit",
       "devops",
       "devtools",
       "dissoc",
@@ -228,6 +230,7 @@
       "getshwweb",
       "gpjby",
       "Gramm",
+      "greensock",
       "groupby",
       "groupid",
       "grouplogreports",
@@ -412,6 +415,7 @@
       "pcexqc",
       "pdfs",
       "pgvy",
+      "phonenumber",
       "playlstapi",
       "polyline",
       "portalweb",
@@ -493,6 +497,7 @@
       "satd",
       "sbuffer",
       "scrollable",
+      "Scroller",
       "SDQVQ",
       "seayou",
       "secretanswer",
