adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -285,6 +285,7 @@
       "justinmk",
       "kdch",
       "keycare",
+      "keycodes",
       "kmonad",
       "kore",
       "Kvppf",
@@ -559,6 +560,7 @@
       "sweetalert",
       "Tabset",
       "TABTITLES",
+      "Tagify",
       "TAILLIGHTCOMMERCE",
       "TAILLIGHTSHOWCASE",
       "targetlevels",
@@ -667,6 +669,7 @@
       "xockp",
       "xserializer",
       "Xuyuanp",
+      "yaireo",
       "yats",
       "yggdroot",
       "YSLV",
