adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -65,6 +65,7 @@
       "careapi",
       "careproc",
       "catid",
+      "ccname",
       "certinfo",
       "changestatus",
       "chargebacks",
@@ -127,6 +128,7 @@
       "countables",
       "createmode",
       "ctermfgs",
+      "ctmpl",
       "CUSTOMERDEALNUMBER",
       "danlaw",
       "danlawapi",
@@ -355,6 +357,7 @@
       "multiguard",
       "multiselect",
       "MULTITERM",
+      "mybouncie",
       "mygroup",
       "MYTABMODES",
       "nacro",
@@ -377,6 +380,7 @@
       "nonvalidatecount",
       "noopener",
       "noreferrer",
+      "npmrc",
       "nvim",
       "objectiveid",
       "OFAC",
