adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -267,6 +267,7 @@
       "IFTTT",
       "illightd",
       "imei",
+      "Imeis",
       "imgix",
       "impid",
       "imtoken",
@@ -627,6 +628,7 @@
       "truecolor",
       "uatsql",
       "uiprod",
+      "unapply",
       "uncheck",
       "unfetch",
       "unflag",
