adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -273,6 +273,7 @@
       "impid",
       "imtoken",
       "infographic",
+      "infographics",
       "inlinesvg",
       "inputurl",
       "inservicerequired",
@@ -544,6 +545,7 @@
       "SIGNIN",
       "Signup",
       "smtp",
+      "sorryapp",
       "sortby",
       "sortdirection",
       "sourceid",
@@ -627,6 +629,7 @@
       "trekweb",
       "triplegs",
       "truecolor",
+      "Turo",
       "uatsql",
       "uiprod",
       "unapply",
