adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -15,6 +15,7 @@
       "adddealership",
       "addfavorites",
       "adminapi",
+      "afms",
       "agendash",
       "airdock",
       "AKIAIXOT",
@@ -44,6 +45,7 @@
       "BADREQUEST",
       "bapi",
       "basepay",
+      "baseterm",
       "Bitstream",
       "Bliley",
       "blinkon",
@@ -55,8 +57,13 @@
       "BPAA",
       "branchio",
       "budco",
+      "businessdriver",
+      "businessdriverlname",
+      "businessname",
       "BUYERCONTRACTINITIALS",
       "BUYERCONTRACTSIGNATURE",
+      "buyerstates",
+      "buyerzip",
       "cachegoose",
       "calculationtypes",
       "camelcase",
@@ -100,6 +107,7 @@
       "COBUYERCONTRACTINITIALS",
       "COBUYERCONTRACTSIGNATURE",
       "COBUYERSIGNATURE",
+      "cobuyerzip",
       "COCLIENTSIGNATURE",
       "codelyzer",
       "cohama",
@@ -129,6 +137,7 @@
       "createmode",
       "ctermfgs",
       "ctmpl",
+      "custdeal",
       "CUSTOMERDEALNUMBER",
       "danlaw",
       "danlawapi",
@@ -138,6 +147,7 @@
       "datatypes",
       "dateofsale",
       "datepicker",
+      "datequarterhourpicker",
       "DATETIME",
       "Dawningofa",
       "dealeraccount",
@@ -276,6 +286,7 @@
       "infographics",
       "inlinesvg",
       "inputurl",
+      "Inservice",
       "inservicerequired",
       "INSIGHTQUESTIONS",
       "INTERNALSERVERERROR",
@@ -325,6 +336,7 @@
       "makemodelinfo",
       "makerapi",
       "makerjs",
+      "Manu",
       "mapbox",
       "matrixlogreports",
       "matrixrankingreports",
@@ -343,6 +355,7 @@
       "middlewares",
       "minlength",
       "mktapi",
+      "mname",
       "mncontractids",
       "Mngr",
       "Mnify",
@@ -357,6 +370,8 @@
       "mosid",
       "msdb",
       "msgproc",
+      "MSRP",
+      "mult",
       "multiguard",
       "multiselect",
       "MULTITERM",
@@ -364,6 +379,7 @@
       "mygroup",
       "MYTABMODES",
       "nacro",
+      "NADA",
       "nelstrom",
       "neoclide",
       "neovim",
@@ -459,6 +475,7 @@
       "pynvim",
       "pythonx",
       "qstring",
+      "quarterhour",
       "querystringify",
       "quoteid",
       "quoteids",
@@ -479,6 +496,7 @@
       "rebooks",
       "recalc",
       "recordset",
+      "redflag",
       "regionid",
       "remitregister",
       "removeapplication",
@@ -491,6 +509,7 @@
       "reporttypeid",
       "reporttypes",
       "requestinguser",
+      "requiredvin",
       "Rerate",
       "resetaccounts",
       "RISTKEN",
@@ -586,6 +605,7 @@
       "theming",
       "TIMEFRAME",
       "tinycolor",
+      "titlecase",
       "tlapp",
       "tlapplication",
       "TLAPPLICATIONS",
@@ -641,6 +661,10 @@
       "upcontractids",
       "updatesales",
       "updatespplink",
+      "upgradecoverageid",
+      "upgradedeductibleid",
+      "upgradeprodid",
+      "upgradesurcharges",
       "upscope",
       "urijs",
       "usageinfo",
@@ -660,6 +684,8 @@
       "vals",
       "vehicleapi",
       "vehicletype",
+      "vehicleyear",
+      "vehyear",
       "Vercel",
       "vindy",
       "vindyapi",
@@ -667,11 +693,14 @@
       "voideds",
       "vsftp",
       "vsftpd",
+      "Vtypes",
       "vtzz",
+      "warr",
       "watchurl",
       "Wdth",
       "webservice",
       "WEBSVC",
+      "whatsnewpreview",
       "whsec",
       "wistia",
       "xgtw",
