adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -51,6 +51,7 @@
       "blinkon",
       "booleanmappings",
       "bouapi",
+      "BOUNC",
       "bouncie",
       "bounciedev",
       "bousallyapi",
@@ -512,6 +513,7 @@
       "requiredvin",
       "Rerate",
       "resetaccounts",
+      "restreamer",
       "RISTKEN",
       "ristkensoft",
       "RISTKENSOFTWARE",
