adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -246,6 +246,7 @@
       "gpjby",
       "Gramm",
       "greensock",
+      "Grogu",
       "groupby",
       "groupid",
       "grouplogreports",
@@ -499,6 +500,7 @@
       "recordset",
       "redflag",
       "regionid",
+      "Rehydrated",
       "remitregister",
       "removeapplication",
       "removedealership",
