adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -334,6 +334,7 @@
       "luochen",
       "luxon",
       "mailchimp",
+      "mailinator",
       "MAINRATETERM",
       "makemodelinfo",
       "makerapi",
@@ -607,6 +608,7 @@
       "Textbox",
       "tfjs",
       "theming",
+      "tickness",
       "TIMEFRAME",
       "tinycolor",
       "titlecase",
@@ -658,6 +660,8 @@
       "uiprod",
       "unapply",
       "uncheck",
+      "Undelete",
+      "undeleting",
       "unfetch",
       "unflag",
       "unittesting",
