adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -273,6 +273,7 @@
       "iamapi",
       "IBNW",
       "iccid",
+      "iccids",
       "Icinriww",
       "idanarye",
       "idbtn",
@@ -501,6 +502,7 @@
       "recordset",
       "redflag",
       "regionid",
+      "Regs",
       "Rehydrated",
       "remitregister",
       "removeapplication",
