adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -450,6 +450,7 @@
       "portalweb",
       "Ppowob",
       "precommit",
+      "Premade",
       "printview",
       "productcategoryid",
       "productcode",
@@ -523,6 +524,7 @@
       "ristkensoft",
       "RISTKENSOFTWARE",
       "Roboto",
+      "rsaquo",
       "rssapplications",
       "rssi",
       "rver",
@@ -667,7 +669,9 @@
       "unfetch",
       "unflag",
       "unittesting",
+      "Unprocessable",
       "UNPROCESSABLEENTITY",
+      "Unvalidated",
       "upcontractids",
       "updatesales",
       "updatespplink",
