adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -44,20 +44,24 @@
       "BADDATA",
       "BADREQUEST",
       "bapi",
+      "Barthélemy",
       "basepay",
       "baseterm",
       "Bitstream",
       "Bliley",
       "blinkon",
+      "Bolivarian",
       "booleanmappings",
       "bouapi",
       "BOUNC",
       "bouncie",
       "bounciedev",
       "bousallyapi",
+      "Bouvet",
       "BPAA",
       "branchio",
       "budco",
+      "Burkina",
       "businessdriver",
       "businessdriverlname",
       "businessname",
@@ -66,6 +70,7 @@
       "buyerstates",
       "buyerzip",
       "cachegoose",
+      "Caicos",
       "calculationtypes",
       "camelcase",
       "campapi",
@@ -138,11 +143,14 @@
       "createmode",
       "ctermfgs",
       "ctmpl",
+      "Cunha",
       "custdeal",
       "CUSTOMERDEALNUMBER",
+      "d'Ivoire",
       "danlaw",
       "danlawapi",
       "Darkholme",
+      "Darussalam",
       "dataapi",
       "datasplit",
       "datatypes",
@@ -178,6 +186,7 @@
       "DONT",
       "DONT\\'T",
       "driveapi",
+      "Dutchpart",
       "EASYCARE",
       "econtract",
       "edmunds",
@@ -205,12 +214,14 @@
       "Esign",
       "esignature",
       "Esigned",
+      "Eustatius",
       "evenodd",
       "exceljs",
       "executables",
       "exportinfo",
       "exporttype",
       "Expy",
+      "Faso",
       "fauria",
       "fcpg",
       "fenceid",
@@ -233,6 +244,7 @@
       "Formik",
       "forumbee",
       "funcobj",
+      "Futuna",
       "FXJVQNJTCQ",
       "gameplans",
       "gbjby",
@@ -306,6 +318,7 @@
       "kdch",
       "keycare",
       "keycodes",
+      "Kitts",
       "kmonad",
       "kore",
       "Kvppf",
@@ -320,6 +333,7 @@
       "ldap",
       "legacyapp",
       "lenderreports",
+      "Leste",
       "leveltypeid",
       "leveltypes",
       "lexima",
@@ -334,6 +348,7 @@
       "Lucida",
       "luochen",
       "luxon",
+      "Maarten",
       "mailchimp",
       "mailinator",
       "MAINRATETERM",
@@ -342,12 +357,14 @@
       "makerjs",
       "Manu",
       "mapbox",
+      "Marino",
       "matrixlogreports",
       "matrixrankingreports",
       "matrixreportmix",
       "matrixreportrows",
       "matrixreports",
       "mattn",
+      "Mayen",
       "Menlo",
       "menupro",
       "menuprologin",
@@ -446,6 +463,7 @@
       "pgvy",
       "phonenumber",
       "playlstapi",
+      "Plurinational",
       "polyline",
       "portalweb",
       "Ppowob",
@@ -520,6 +538,7 @@
       "Rerate",
       "resetaccounts",
       "restreamer",
+      "Rica",
       "RISTKEN",
       "ristkensoft",
       "RISTKENSOFTWARE",
@@ -572,6 +591,8 @@
       "signaturepad",
       "SIGNIN",
       "Signup",
+      "Sint",
+      "Skus",
       "smtp",
       "sorryapp",
       "sortby",
@@ -650,6 +671,7 @@
       "TLSHOWCASELITE",
       "tlsignupservice",
       "tmux",
+      "Tokelau",
       "totalpages",
       "TPACODE",
       "tpope",
@@ -658,6 +680,7 @@
       "trekapi",
       "trekweb",
       "triplegs",
+      "Tristanda",
       "truecolor",
       "Turo",
       "uatsql",
@@ -734,6 +757,7 @@
       "zulgwapi",
       "zulumktweb",
       "zuluweb",
-      "zurichuser"
+      "zurichuser",
+      "Åland"
     ]
 }
