adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -43,6 +43,7 @@
       "ayfv",
       "BADDATA",
       "BADREQUEST",
+      "Baja",
       "bapi",
       "Barthélemy",
       "basepay",
@@ -79,6 +80,7 @@
       "careproc",
       "catid",
       "ccname",
+      "CDMX",
       "certinfo",
       "changestatus",
       "chargebacks",
@@ -87,6 +89,7 @@
       "chartsettingid",
       "chartsettings",
       "checkmark",
+      "Chih",
       "childlevelid",
       "childlevels",
       "childsetupbooleanid",
@@ -102,6 +105,7 @@
       "christoomey",
       "chruby",
       "citems",
+      "Ciudad",
       "Ckhp",
       "clickup",
       "CLIENTSIGNATURE",
@@ -109,6 +113,7 @@
       "clustertype",
       "cmode",
       "CMYK",
+      "Coah",
       "COBUYER",
       "COBUYERCONTRACTINITIALS",
       "COBUYERCONTRACTSIGNATURE",
@@ -190,6 +195,7 @@
       "EASYCARE",
       "econtract",
       "edmunds",
+      "Edomex",
       "elwccm",
       "emailfnd",
       "emnify",
@@ -388,6 +394,7 @@
       "monthofsale",
       "monthofsales",
       "monthsback",
+      "mookme",
       "mosid",
       "msdb",
       "msgproc",
@@ -421,8 +428,10 @@
       "noopener",
       "noreferrer",
       "npmrc",
+      "Nuevo",
       "nvim",
       "objectiveid",
+      "Ocampo",
       "OFAC",
       "OFFICIALDOCS",
       "offsiteapi",
@@ -438,6 +447,7 @@
       "pageid",
       "pageindex",
       "pagenum",
+      "pageview",
       "Paginations",
       "pandadoc",
       "parentlevelid",
@@ -466,6 +476,7 @@
       "Plurinational",
       "polyline",
       "portalweb",
+      "Potosi",
       "Ppowob",
       "precommit",
       "Premade",
@@ -495,11 +506,13 @@
       "proxying",
       "psfc",
       "Ptutex",
+      "PUSHSTATE",
       "pynvim",
       "pythonx",
       "qstring",
       "quarterhour",
       "querystringify",
+      "Quintana",
       "quoteid",
       "quoteids",
       "quotesasrates",
@@ -610,6 +623,8 @@
       "statusid",
       "statusname",
       "stylis",
+      "sublocality",
+      "subpremise",
       "subresult",
       "subresults",
       "svcapi",
@@ -640,6 +655,7 @@
       "tlapp",
       "tlapplication",
       "TLAPPLICATIONS",
+      "Tlax",
       "TLCOMMERCE",
       "tliteapi",
       "tloacctapi",
@@ -751,6 +767,7 @@
       "yggdroot",
       "YSLV",
       "YYMMDD",
+      "Zaragoza",
       "Zeyada",
       "zjgpj",
       "zoneid",
