adds quickscope package

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -326,6 +326,7 @@
       "keycodes",
       "Kitts",
       "kmonad",
+      "Konfekt",
       "kore",
       "Kvppf",
       "kwad",
@@ -702,6 +703,7 @@
       "uatsql",
       "uiprod",
       "unapply",
+      "unblevable",
       "uncheck",
       "Undelete",
       "undeleting",
