adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -467,6 +467,7 @@
       "partnerproductrates",
       "passwordchange",
       "passwordok",
+      "paymentmethod",
       "paymentweb",
       "pbcopy",
       "pcexqc",
@@ -532,6 +533,7 @@
       "Rebooked",
       "rebooks",
       "recalc",
+      "recomputations",
       "recordset",
       "redflag",
       "regionid",
