--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -249,6 +249,7 @@
       "FORDESP",
       "Formik",
       "forumbee",
+      "fsautocomplete",
       "funcobj",
       "Futuna",
       "FXJVQNJTCQ",
