adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -478,6 +478,7 @@
       "playlstapi",
       "Plurinational",
       "polyline",
+      "polylines",
       "portalweb",
       "Potosi",
       "Ppowob",
@@ -699,6 +700,7 @@
       "traefikproxy",
       "trekapi",
       "trekweb",
+      "Tripleg",
       "triplegs",
       "Tristanda",
       "truecolor",
