--- a/kitty.conf
+++ b/kitty.conf
@@ -2,6 +2,9 @@
 
 #: Fonts {{{
 
+font_family Hack Nerd Font Mono
+font_size 14.0
+
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
