maps ctrl+, to ctrl+w for tmux prefix key

--- a/kitty.conf
+++ b/kitty.conf
@@ -1120,6 +1120,8 @@ font_size 14.0
 
 #: Keyboard shortcuts {{{
 
+map ctrl+, send_text all \x17 # ctrl+w (tmux prefix mapping)
+
 #: Keys are identified simply by their lowercase unicode characters.
 #: For example: ``a`` for the A key, ``[`` for the left square bracket
 #: key, etc. For functional keys, such as ``Enter or Escape`` the
