--- a/kitty.conf
+++ b/kitty.conf
@@ -1120,7 +1120,8 @@ font_size 14.0
 
 #: Keyboard shortcuts {{{
 
-map ctrl+, send_text all \x17 # ctrl+w (tmux prefix mapping)
+# tmux prefix mapping ctrl+, -> ctrl+w
+map ctrl+, send_text all \x17
 
 #: Keys are identified simply by their lowercase unicode characters.
 #: For example: ``a`` for the A key, ``[`` for the left square bracket
