adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -697,6 +697,7 @@
       "tlsignupservice",
       "tmux",
       "Tokelau",
+      "toprettyxml",
       "totalpages",
       "TPACODE",
       "tpope",
