--- a/kitty.conf
+++ b/kitty.conf
@@ -1081,7 +1081,7 @@ confirm_os_window_close 0
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
-# macos_thicken_font 0
+macos_thicken_font 0.1
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
