--- a/kitty.conf
+++ b/kitty.conf
@@ -1054,7 +1054,7 @@ confirm_os_window_close 0
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
