reorganized existing config values

--- a/kitty.conf
+++ b/kitty.conf
@@ -2,17 +2,14 @@
 
 #: Fonts {{{
 
-font_family Hack Nerd Font Mono
-font_size 14.0
-
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family Hack Nerd Font Mono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -26,7 +23,7 @@ font_size 14.0
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -1120,9 +1117,6 @@ macos_thicken_font 0.1
 
 #: Keyboard shortcuts {{{
 
-# tmux prefix mapping ctrl+, -> ctrl+w
-map ctrl+, send_text all \x17
-
 #: Keys are identified simply by their lowercase unicode characters.
 #: For example: ``a`` for the A key, ``[`` for the left square bracket
 #: key, etc. For functional keys, such as ``Enter or Escape`` the
@@ -1153,6 +1147,9 @@ map ctrl+, send_text all \x17
 #:     map ctrl+0x61 something
 
 #: to map ctrl+a to something.
+
+# tmux prefix mapping ctrl+, -> ctrl+w
+map ctrl+, send_text all \x17
 
 #: You can use the special action no_op to unmap a keyboard shortcut
 #: that is assigned in the default configuration::
