adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -632,6 +632,7 @@
       "staticassets",
       "statusid",
       "statusname",
+      "strs",
       "stylis",
       "sublocality",
       "subpremise",
