adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -55,6 +55,8 @@
       "Bolivarian",
       "booleanmappings",
       "bouapi",
+      "boudiagapi",
+      "boumy",
       "BOUNC",
       "bouncie",
       "bounciedev",
@@ -183,6 +185,7 @@
       "devkit",
       "devops",
       "devtools",
+      "diagapi",
       "dissoc",
       "distproc",
       "distributionreports",
@@ -227,6 +230,7 @@
       "evenodd",
       "exceljs",
       "executables",
+      "exitcrash",
       "exportinfo",
       "exporttype",
       "Expy",
@@ -409,6 +413,7 @@
       "multiguard",
       "multiselect",
       "MULTITERM",
+      "mybou",
       "mybouncie",
       "mygroup",
       "MYTABMODES",
