adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -483,6 +483,7 @@
       "pbcopy",
       "pcexqc",
       "pdfs",
+      "persistor",
       "pgvy",
       "phonenumber",
       "playlstapi",
@@ -571,6 +572,7 @@
       "ristkensoft",
       "RISTKENSOFTWARE",
       "Roboto",
+      "rollbar",
       "rsaquo",
       "rssapplications",
       "rssi",
