--- a/kitty.conf
+++ b/kitty.conf
@@ -397,6 +397,7 @@ mouse_hide_wait -1.0
 # mouse_map left            click ungrabbed mouse_click_url_or_select
 # mouse_map shift+left      click grabbed,ungrabbed mouse_click_url_or_select
 # mouse_map ctrl+shift+left release grabbed,ungrabbed mouse_click_url
+mouse_map cmd+left press ungrabbed,grabbed mouse_click_url
 
 #: Variant with ctrl+shift is present because the simple click based
 #: version has an unavoidable delay of click_interval, to disambiguate
