opening new windows in tmux has directory set to ~/projects/od-env/projects

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,6 +100,9 @@ bind-key -T root WheelDownPane \
 # No delay for escape key press
 set -sg escape-time 0
 
+# New Window Default Directory
+bind-key c new-window -c ~/projects/od-env/projects
+
 # Split Panes
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
