adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -209,6 +209,7 @@
       "emptynames",
       "emtz",
       "enchelper",
+      "enddate",
       "enddt",
       "enumsetupbooleandatestamptype",
       "enumsetupcollectionmaptypes",
@@ -455,6 +456,7 @@
       "ordersapi",
       "organizationattributes",
       "organizationtypes",
+      "overspeed",
       "pageheader",
       "pageid",
       "pageindex",
@@ -635,6 +637,7 @@
       "sppquote",
       "SPROC",
       "ssotoken",
+      "startdate",
       "startdt",
       "staticassets",
       "statusid",
