adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -87,6 +87,7 @@
       "ccname",
       "CDMX",
       "certinfo",
+      "changepassword",
       "changestatus",
       "chargebacks",
       "chartid",
@@ -568,6 +569,7 @@
       "requiredvin",
       "Rerate",
       "resetaccounts",
+      "resetpassword",
       "restreamer",
       "Rica",
       "RISTKEN",
