adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -489,6 +489,7 @@
       "persistor",
       "pgvy",
       "phonenumber",
+      "Pids",
       "playlstapi",
       "Plurinational",
       "polyline",
@@ -762,6 +763,7 @@
       "validationtypes",
       "vals",
       "vehicleapi",
+      "vehicleevents",
       "vehicletype",
       "vehicleyear",
       "vehyear",
