adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -567,6 +567,7 @@
       "reporttypeid",
       "reporttypes",
       "requestinguser",
+      "require'nvim",
       "requiredvin",
       "Rerate",
       "resetaccounts",
