enables true color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -160,9 +160,13 @@ set -w -g wrap-search off
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'off'
 
-# Default terminal
+# Terminal
 set -g default-terminal 'screen-256color'
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+# Terminal Overrides
+#   Block Cursor in VIM normal/visual mode
+#   Underscore Cursor in VIM insert mode
+#   True Color
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q:Tc'
 
 # Ensure FocusGained and FocusLost events work
 set -g focus-events on
