adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -126,6 +126,7 @@
       "COBUYERSIGNATURE",
       "cobuyerzip",
       "COCLIENTSIGNATURE",
+      "cocopon",
       "codelyzer",
       "cohama",
       "COLORTERM",
