--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -737,6 +737,7 @@
       "undeleting",
       "unfetch",
       "unflag",
+      "ungap",
       "unittesting",
       "Unprocessable",
       "UNPROCESSABLEENTITY",
