adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -669,6 +669,7 @@
       "telproc",
       "templating",
       "tensorflow",
+      "terafox",
       "termguicolors",
       "terminfo",
       "testuser",
