adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -198,6 +198,7 @@
       "dnscache",
       "DONT",
       "DONT\\'T",
+      "dppx",
       "driveapi",
       "dstein",
       "Dutchpart",
@@ -800,6 +801,7 @@
       "yaireo",
       "yats",
       "yggdroot",
+      "youtube",
       "YSLV",
       "YYMMDD",
       "Zaragoza",
