updates move window key binding to keep focus on the moved window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,6 +79,8 @@ set -g message-style "${CL1_SEC_NO_EXP}"
 set -g mode-style "${CL1_SEC_NO_EXP}"
 
 # General Settings
+set -g base-index 1
+setw -g pane-base-index 1
 set -g history-limit 10000
 setw -g monitor-activity off
 set -g visual-activity on
@@ -114,8 +116,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key C-k kill-session
 
 # Swap Windows
-bind-key C-h swap-window -t -1
-bind-key C-l swap-window -t +1
+bind-key C-h swap-window -t -1 \; select-window -t -1
+bind-key C-l swap-window -t +1 \; select-window -t +1
 
 # Vim mode {{{
 
