--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,29 +14,29 @@ set -g set-titles on
 SEP_L=""
 SEP_R=""
 
-CL1_PRI="#[fg=colour27,bg=colour255,bold]"
-CL1_SEC="#[fg=colour255,bg=colour27]"
-CL1_SEC_NO_EXP="fg=colour255,bg=colour27"
+CL1_PRI="#[fg=#131a24,bg=#cdcecf,bold]"
+CL1_SEC="#[fg=#cdcecf,bg=#719cd6]"
+CL1_SEC_NO_EXP="fg=#cdcecf,bg=#131a24"
 
-CL1_TSA="#[fg=colour27,bg=colour81]"
-CL1_TSB="#[fg=colour81,bg=colour159]"
-CL1_TSC="#[fg=colour27,bg=colour159]"
-CL1_TSD="#[fg=colour81,bg=colour27]"
-CL1_TSE="#[fg=colour159,bg=colour81]"
+CL1_TSA="#[fg=#131a24,bg=#9d79d6]"
+CL1_TSB="#[fg=#719cd6,bg=#cdcecf]"
+CL1_TSC="#[fg=#131a24,bg=#cdcecf]"
+CL1_TSD="#[fg=#39506d,bg=#131a24]"
+CL1_TSE="#[fg=#cdcecf,bg=#131a24]"
 
-CL2_PRI="#[fg=colour237,bg=colour255]"
-CL2_SEC="#[fg=colour255,bg=colour237]"
+CL2_PRI="#[fg=#719cd6,bg=#cdcecf]"
+CL2_SEC="#[fg=#dfdfe0,bg=#9d79d6]"
 
-CL2_TSA="#[fg=colour237,bg=colour245]"
-CL2_TSB="#[fg=colour245,bg=colour255]"
-CL2_TSC="#[fg=colour237,bg=colour255]"
-CL2_TSD="#[fg=colour245,bg=colour159]"
-CL2_TSE="#[fg=colour237,bg=colour245]"
+CL2_TSA="#[fg=#719cd6,bg=#719cd6]"
+CL2_TSB="#[fg=#9d79d6,bg=#cdcecf]"
+CL2_TSC="#[fg=#9d79d6,bg=#cdcecf]"
+CL2_TSD="#[fg=#719cd6,bg=#cdcecf]"
+CL2_TSE="#[fg=#9d79d6,bg=#cdcecf]"
 
-CL1_TS1="${CL2_TSA}${SEP_L}${CL2_TSB}${SEP_L}${CL2_TSC}"
-CL1_TS2="${CL1_TSD}${SEP_R}${CL1_TSE}${SEP_R}${CL1_TSC}"
-CL2_TS1="${CL1_TSA}${SEP_L}${CL1_TSB}${SEP_L}${CL1_TSC}"
-CL2_TS2="${CL2_TSD}${SEP_R}${CL2_TSE}${SEP_R}${CL2_SEC}"
+CL1_TS1="${CL2_TSB}${SEP_L}${CL2_TSC}"
+CL1_TS2="${CL1_TSE}${SEP_R}${CL1_TSC}"
+CL2_TS1="${CL1_TSB}${SEP_L}${CL1_TSC}"
+CL2_TS2="${CL2_TSE}${SEP_R}${CL2_SEC}"
 
 # }}}
 
