continues to update color scheme with nightfox colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,35 +14,17 @@ set -g set-titles on
 SEP_L=""
 SEP_R=""
 
-CL1_PRI="#[fg=#131a24,bg=#cdcecf,bold]"
-CL1_SEC="#[fg=#cdcecf,bg=#719cd6]"
-CL1_SEC_NO_EXP="fg=#cdcecf,bg=#131a24"
-
-CL1_TSA="#[fg=#131a24,bg=#9d79d6]"
-CL1_TSB="#[fg=#719cd6,bg=#cdcecf]"
-CL1_TSC="#[fg=#131a24,bg=#cdcecf]"
-CL1_TSD="#[fg=#39506d,bg=#131a24]"
-CL1_TSE="#[fg=#cdcecf,bg=#131a24]"
-
-CL2_PRI="#[fg=#719cd6,bg=#cdcecf]"
-CL2_SEC="#[fg=#dfdfe0,bg=#9d79d6]"
-
-CL2_TSA="#[fg=#719cd6,bg=#719cd6]"
-CL2_TSB="#[fg=#9d79d6,bg=#cdcecf]"
-CL2_TSC="#[fg=#9d79d6,bg=#cdcecf]"
-CL2_TSD="#[fg=#719cd6,bg=#cdcecf]"
-CL2_TSE="#[fg=#9d79d6,bg=#cdcecf]"
-
-CL1_TS1="${CL2_TSB}${SEP_L}${CL2_TSC}"
-CL1_TS2="${CL1_TSE}${SEP_R}${CL1_TSC}"
-CL2_TS1="${CL1_TSB}${SEP_L}${CL1_TSC}"
-CL2_TS2="${CL2_TSE}${SEP_R}${CL2_SEC}"
+WHITE_LIGHT_BLUE="#[fg=#cdcecf,bg=#719cd6]"
+LIGHT_BLUE_WHITE="#[fg=#719cd6,bg=#39506d]"
+WHITE_BLUE="#[fg=#cdcecf,bg=#39506d]"
+BLUE_WHITE="#[fg=#39506d,bg=#cdcecf]"
+PURPLE_BLUE="#[fg=#9d79d6,bg=#39506d,bold]"
 
 # }}}
 
 # Status Window format
-setw -g window-status-current-format "${CL2_SEC} #I ${CL1_TS1} #W* "
-setw -g window-status-format "${CL1_SEC} #I ${CL2_TS1} #W "
+setw -g window-status-current-format "${WHITE_LIGHT_BLUE} #I ${LIGHT_BLUE_WHITE}${SEP_L}${PURPLE_BLUE} #W* "
+setw -g window-status-format "${WHITE_LIGHT_BLUE} #I ${LIGHT_BLUE_WHITE}${SEP_L}${WHITE_BLUE} #W "
 
 # Status Window styling {{{
 
@@ -51,18 +33,18 @@ set -g status-interval 1
 set -g status-justify "left"
 set -g status-left-length 60
 set -g status-right-length 90
-set -g status-style "${CL1_SEC_NO_EXP}"
-set -g status-left-style "${CL1_SEC_NO_EXP}"
-set -g status-right-style "${CL1_SEC_NO_EXP}"
+set -g status-style "${WHITE_BLUE}"
+set -g status-left-style "${WHITE_BLUE}"
+set -g status-right-style "${WHITE_BLUE}"
 set -g status-left ""
-set -g status-right "#{prefix_highlight} ${CL1_TS2} #{pane_current_path} ${CL2_TS2} %m/%d/%Y %r "
+set -g status-right "#{prefix_highlight} ${WHITE_BLUE}${SEP_R}${BLUE_WHITE} #{pane_current_path} ${BLUE_WHITE}${SEP_R}${WHITE_BLUE} %m/%d/%Y %r "
 
-setw -g window-status-style "${CL1_SEC_NO_EXP}"
+setw -g window-status-style "${WHITE_BLUE}"
 setw -g window-status-separator ""
-setw -g window-status-current-style "${CL1_SEC_NO_EXP}"
-setw -g window-status-activity-style "${CL1_SEC_NO_EXP}"
-setw -g window-status-bell-style "${CL1_SEC_NO_EXP}"
-setw -g window-status-last-style "${CL1_SEC_NO_EXP}"
+setw -g window-status-current-style "${WHITE_BLUE}"
+setw -g window-status-activity-style "${WHITE_BLUE}"
+setw -g window-status-bell-style "${WHITE_BLUE}"
+setw -g window-status-last-style "${WHITE_BLUE}"
 
 # }}}
 
@@ -74,9 +56,9 @@ set -g window-active-style 'fg=colour250,bg=colour0'
 set -g pane-border-style bg=colour235,fg=colour238
 set -g pane-active-border-style bg=colour236,fg=colour51
 
-set -g message-command-style "${CL1_SEC_NO_EXP}"
-set -g message-style "${CL1_SEC_NO_EXP}"
-set -g mode-style "${CL1_SEC_NO_EXP}"
+set -g message-command-style "${WHITE_BLUE}"
+set -g message-style "${WHITE_BLUE}"
+set -g mode-style "${WHITE_BLUE}"
 
 # General Settings
 set -g base-index 1
