renames variables and swaps current/non-current window fg colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,17 +14,24 @@ set -g set-titles on
 SEP_L=""
 SEP_R=""
 
-WHITE_LIGHT_BLUE="#[fg=#cdcecf,bg=#719cd6]"
-LIGHT_BLUE_WHITE="#[fg=#719cd6,bg=#39506d]"
-WHITE_BLUE="#[fg=#cdcecf,bg=#39506d]"
-BLUE_WHITE="#[fg=#39506d,bg=#cdcecf]"
-PURPLE_BLUE="#[fg=#9d79d6,bg=#39506d,bold]"
+BLUE="#39506d"
+GRAY="#303030"
+LIGHT_BLUE="#719cd6"
+PURPLE="#9d79d6"
+WHITE="#cdcecf"
+
+BLUE__WHITE="#[fg=${BLUE},bg=${WHITE}]"
+LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE}]"
+PURPLE__BLUE="#[fg=${PURPLE},bg=${BLUE}]"
+WHITE__BLUE="#[fg=${WHITE},bg=${BLUE}]"
+WHITE__BLUE__BOLD="#[fg=${WHITE},bg=${BLUE},bold]"
+WHITE__LIGHT_BLUE="#[fg=${WHITE},bg=${LIGHT_BLUE}]"
 
 # }}}
 
 # Status Window format
-setw -g window-status-current-format "${WHITE_LIGHT_BLUE} #I ${LIGHT_BLUE_WHITE}${SEP_L}${PURPLE_BLUE} #W* "
-setw -g window-status-format "${WHITE_LIGHT_BLUE} #I ${LIGHT_BLUE_WHITE}${SEP_L}${WHITE_BLUE} #W "
+setw -g window-status-current-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${WHITE__BLUE__BOLD} #W* "
+setw -g window-status-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${PURPLE__BLUE} #W "
 
 # Status Window styling {{{
 
@@ -33,18 +40,18 @@ set -g status-interval 1
 set -g status-justify "left"
 set -g status-left-length 60
 set -g status-right-length 90
-set -g status-style "${WHITE_BLUE}"
-set -g status-left-style "${WHITE_BLUE}"
-set -g status-right-style "${WHITE_BLUE}"
+set -g status-style "${WHITE__BLUE}"
+set -g status-left-style "${WHITE__BLUE}"
+set -g status-right-style "${WHITE__BLUE}"
 set -g status-left ""
-set -g status-right "#{prefix_highlight} ${WHITE_BLUE}${SEP_R}${BLUE_WHITE} #{pane_current_path} ${BLUE_WHITE}${SEP_R}${WHITE_BLUE} %m/%d/%Y %r "
+set -g status-right "#{prefix_highlight} ${WHITE__BLUE}${SEP_R}${BLUE__WHITE} #{pane_current_path} ${BLUE__WHITE}${SEP_R}${WHITE__BLUE} %m/%d/%Y %r "
 
-setw -g window-status-style "${WHITE_BLUE}"
+setw -g window-status-style "${WHITE__BLUE}"
 setw -g window-status-separator ""
-setw -g window-status-current-style "${WHITE_BLUE}"
-setw -g window-status-activity-style "${WHITE_BLUE}"
-setw -g window-status-bell-style "${WHITE_BLUE}"
-setw -g window-status-last-style "${WHITE_BLUE}"
+setw -g window-status-current-style "${WHITE__BLUE}"
+setw -g window-status-activity-style "${WHITE__BLUE}"
+setw -g window-status-bell-style "${WHITE__BLUE}"
+setw -g window-status-last-style "${WHITE__BLUE}"
 
 # }}}
 
@@ -56,9 +63,9 @@ set -g window-active-style 'fg=colour250,bg=colour0'
 set -g pane-border-style bg=colour235,fg=colour238
 set -g pane-active-border-style bg=colour236,fg=colour51
 
-set -g message-command-style "${WHITE_BLUE}"
-set -g message-style "${WHITE_BLUE}"
-set -g mode-style "${WHITE_BLUE}"
+set -g message-command-style "${WHITE__BLUE}"
+set -g message-style "${WHITE__BLUE}"
+set -g mode-style "${WHITE__BLUE}"
 
 # General Settings
 set -g base-index 1
