updates active/non-active window/pane to match nightfox color scheme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ set -g set-titles on
 SEP_L=""
 SEP_R=""
 
+BLACK="#000000"
 BLUE="#39506d"
 GRAY="#303030"
 LIGHT_BLUE="#719cd6"
@@ -56,12 +57,12 @@ setw -g window-status-last-style "${WHITE__BLUE}"
 # }}}
 
 # Window Styling
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=colour0'
+set -g window-style "fg=${GRAY},bg=${GRAY}"
+set -g window-active-style "fg=${WHITE},bg=${BLACK}"
 
 # Pane Styling
-set -g pane-border-style bg=colour235,fg=colour238
-set -g pane-active-border-style bg=colour236,fg=colour51
+set -g pane-border-style "fg=${WHITE},bg=${GRAY}"
+set -g pane-active-border-style "fg=${WHITE},bg=${GRAY}"
 
 set -g message-command-style "${WHITE__BLUE}"
 set -g message-style "${WHITE__BLUE}"
