more updates to tmux color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,9 +21,10 @@ LIGHT_BLUE="#719cd6"
 PURPLE="#9d79d6"
 WHITE="#cdcecf"
 
-BLUE__WHITE="#[fg=${BLUE},bg=${WHITE}]"
+BLACK__LIGHT_BLUE="#[fg=${BLACK},bg=${LIGHT_BLUE}]"
+BLACK__PURPLE="#[fg=${BLACK},bg=${PURPLE}]"
 LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE}]"
-PURPLE__BLUE="#[fg=${PURPLE},bg=${BLUE}]"
+PURPLE__LIGHT_BLUE="#[fg=${PURPLE},bg=${LIGHT_BLUE}]"
 WHITE__BLUE="#[fg=${WHITE},bg=${BLUE}]"
 WHITE__BLUE__BOLD="#[fg=${WHITE},bg=${BLUE},bold]"
 WHITE__LIGHT_BLUE="#[fg=${WHITE},bg=${LIGHT_BLUE}]"
@@ -32,7 +33,7 @@ WHITE__LIGHT_BLUE="#[fg=${WHITE},bg=${LIGHT_BLUE}]"
 
 # Status Window format
 setw -g window-status-current-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${WHITE__BLUE__BOLD} #W* "
-setw -g window-status-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${PURPLE__BLUE} #W "
+setw -g window-status-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${LIGHT_BLUE__BLUE} #W "
 
 # Status Window styling {{{
 
@@ -45,7 +46,7 @@ set -g status-style "${WHITE__BLUE}"
 set -g status-left-style "${WHITE__BLUE}"
 set -g status-right-style "${WHITE__BLUE}"
 set -g status-left ""
-set -g status-right "#{prefix_highlight} ${WHITE__BLUE}${SEP_R}${BLUE__WHITE} #{pane_current_path} ${BLUE__WHITE}${SEP_R}${WHITE__BLUE} %m/%d/%Y %r "
+set -g status-right "#{prefix_highlight} ${LIGHT_BLUE__BLUE}${SEP_R}${BLACK__LIGHT_BLUE} #{pane_current_path} ${PURPLE__LIGHT_BLUE}${SEP_R}${BLACK__PURPLE} %m/%d/%Y %r "
 
 setw -g window-status-style "${WHITE__BLUE}"
 setw -g window-status-separator ""
@@ -57,7 +58,7 @@ setw -g window-status-last-style "${WHITE__BLUE}"
 # }}}
 
 # Window Styling
-set -g window-style "fg=${GRAY},bg=${GRAY}"
+set -g window-style "fg=${WHITE},bg=${GRAY}"
 set -g window-active-style "fg=${WHITE},bg=${BLACK}"
 
 # Pane Styling
