updates prefix mapping comment

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Prefix Key
 unbind-key C-b
-set -g prefix C-w # In terminal, this is remapped to <C-,>
+set -g prefix C-w # In the terminal, <C-,> is mapped to send <C-,w> (0x17)
 
 # Set default shell
 set -g default-command $SHELL
