updates tmux current window number font to bold

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,11 +28,12 @@ PURPLE__LIGHT_BLUE="#[fg=${PURPLE},bg=${LIGHT_BLUE}]"
 WHITE__BLUE="#[fg=${WHITE},bg=${BLUE}]"
 WHITE__BLUE__BOLD="#[fg=${WHITE},bg=${BLUE},bold]"
 WHITE__LIGHT_BLUE="#[fg=${WHITE},bg=${LIGHT_BLUE}]"
+WHITE__LIGHT_BLUE__BOLD="#[fg=${WHITE},bg=${LIGHT_BLUE},bold]"
 
 # }}}
 
 # Status Window format
-setw -g window-status-current-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${WHITE__BLUE__BOLD} #W* "
+setw -g window-status-current-format "${WHITE__LIGHT_BLUE__BOLD} #I ${LIGHT_BLUE__BLUE}${SEP_L}${WHITE__BLUE__BOLD} #W* "
 setw -g window-status-format "${WHITE__LIGHT_BLUE} #I ${LIGHT_BLUE__BLUE}${SEP_L}${LIGHT_BLUE__BLUE} #W "
 
 # Status Window styling {{{
