--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -153,6 +153,7 @@
       "Cosignatures",
       "countables",
       "createmode",
+      "cropperjs",
       "ctermfgs",
       "ctmpl",
       "Cunha",
@@ -286,6 +287,7 @@
       "gsap",
       "Gstatus",
       "Gtag",
+      "gtlaptop",
       "guifgs",
       "gwapi",
       "GWSZ",
@@ -809,6 +811,7 @@
       "Zeyada",
       "zjgpj",
       "zoneid",
+      "zoomable",
       "zulgwapi",
       "zulumktweb",
       "zuluweb",
