adds words to dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -145,6 +145,7 @@
       "contractstatuses",
       "contractstatusname",
       "controlfreak",
+      "Conv",
       "coord",
       "Cordova",
       "coremenudeals",
