updates status styling variable to correct format

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ BLACK__LIGHT_BLUE="#[fg=${BLACK},bg=${LIGHT_BLUE}]"
 BLACK__PURPLE="#[fg=${BLACK},bg=${PURPLE}]"
 LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE}]"
 PURPLE__LIGHT_BLUE="#[fg=${PURPLE},bg=${LIGHT_BLUE}]"
-WHITE__BLUE="#[fg=${WHITE},bg=${BLUE}]"
+WHITE__BLUE="fg=${WHITE},bg=${BLUE}"
 WHITE__BLUE__BOLD="#[fg=${WHITE},bg=${BLUE},bold]"
 WHITE__LIGHT_BLUE="#[fg=${WHITE},bg=${LIGHT_BLUE}]"
 WHITE__LIGHT_BLUE__BOLD="#[fg=${WHITE},bg=${LIGHT_BLUE},bold]"
