--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -554,6 +554,7 @@
       "rarr",
       "ratepersist",
       "ratesasquotes",
+      "rawlist",
       "rbenv",
       "Rebooked",
       "rebooks",
