adds words to dictionary

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -313,6 +313,7 @@
       "idanarye",
       "idbtn",
       "Idxs",
+      "ierr",
       "IFTTT",
       "illightd",
       "imei",
@@ -449,6 +450,7 @@
       "noopener",
       "noreferrer",
       "npmrc",
+      "NREUM",
       "Nuevo",
       "nums",
       "nvim",
@@ -798,6 +800,7 @@
       "whatsnewpreview",
       "whsec",
       "wistia",
+      "Wrappable",
       "xgtw",
       "xgtwqa",
       "xlink",
