--- a/coc-settings.json
+++ b/coc-settings.json
@@ -720,6 +720,7 @@
       "tlotrekapi",
       "tlouserapi",
       "tlovehicleapi",
+      "TLPLAT",
       "tlpvindyapi",
       "TLSHOWCASE",
       "TLSHOWCASELITE",
