tmux active window background is nightfox blue

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,8 @@ LIGHT_BLUE="#719cd6"
 PURPLE="#9d79d6"
 WHITE="#cdcecf"
 
+NIGHT_FOX_BG="#192330"
+
 BLACK__LIGHT_BLUE="#[fg=${BLACK},bg=${LIGHT_BLUE}]"
 BLACK__PURPLE="#[fg=${BLACK},bg=${PURPLE}]"
 LIGHT_BLUE__BLUE="#[fg=${LIGHT_BLUE},bg=${BLUE}]"
@@ -56,7 +58,7 @@ setw -g window-status-last-style "${WHITE__BLUE}"
 # }}}
 
 set -g window-style "fg=${WHITE},bg=${GRAY}"
-set -g window-active-style "fg=${WHITE},bg=${BLACK}"
+set -g window-active-style "fg=${WHITE},bg=${NIGHT_FOX_BG}"
 set -g pane-border-style "fg=${WHITE},bg=${GRAY}"
 set -g pane-active-border-style "fg=${WHITE},bg=${GRAY}"
 set -g message-command-style "${WHITE__BLUE}"
