M-key is resize for tmux, CM-key is resize for vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,15 +115,17 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -Z -R"
 bind-key -T copy-mode-vi C-h select-pane -Z -L
 bind-key -T copy-mode-vi C-j select-pane -Z -D
 bind-key -T copy-mode-vi C-k select-pane -Z -U
-bind-key -T copy-mode-vi C-l select-pane -Z -R
 
+# Send to Vim
 bind-key -n M-C-h send-keys M-h
 bind-key -n M-C-l send-keys M-l
+bind-key -n M-C-k send-keys M-k
+bind-key -n M-C-j send-keys M-j
+
 bind-key -n M-h resize-pane -L
 bind-key -n M-l resize-pane -R
-
-bind-key -n M-k if-shell "$is_vim" "send-keys M-k" "resize-pane -U"
-bind-key -n M-j if-shell "$is_vim" "send-keys M-j" "resize-pane -D"
+bind-key -n M-k resize-pane -U
+bind-key -n M-j resize-pane -D
 
 # Vim style copy
 bind-key -T copy-mode-vi v send-keys -X begin-selection
