--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	excludesfile = /Users/griffithc/.gitignore
-    pager = /usr/local/share/git-core/contrib/diff-highlight/diff-highlight | less
+    pager = /usr/local/share/git-core/contrib/diff-highlight/diff-highlight | less -FX
 [difftool "sourcetree"]
     cmd = opendiff \"$LOCAL\" \"$REMOTE\"
     path =
