turns off kitty flashing

--- a/kitty.conf
+++ b/kitty.conf
@@ -481,7 +481,7 @@ mouse_map cmd+left press ungrabbed,grabbed mouse_click_url
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
 
-# visual_bell_duration 0.0
+visual_bell_duration 0.0
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
