--- a/kitty.conf
+++ b/kitty.conf
@@ -481,7 +481,7 @@ enable_audio_bell no
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
 
-visual_bell_duration 0
+visual_bell_duration 0.0
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
@@ -497,7 +497,7 @@ bell_on_tab no
 #: windows in the tab and the window is not the currently focused
 #: window
 
-# command_on_bell none
+command_on_bell none
 
 #: Program to run when a bell occurs. The environment variable
 #: KITTY_CHILD_CMDLINE can be used to get the program running in the
@@ -1067,7 +1067,7 @@ macos_option_as_alt yes
 #: Hide the kitty window from running tasks (⌘+Tab) on macOS. Changing
 #: this setting by reloading the config is not supported.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
@@ -1191,7 +1191,7 @@ map ctrl+, send_text all \x17
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
 
-# kitten_alias hints hints --hints-offset=0
+kitten_alias hints hints --hints-offset=0
 
 #: You can create aliases for kitten names, this allows overriding the
 #: defaults for kitten options and can also be used to shorten
@@ -1315,6 +1315,15 @@ map ctrl+, send_text all \x17
 # map kitty_mod+.     move_tab_forward
 # map kitty_mod+,     move_tab_backward
 # map kitty_mod+alt+t set_tab_title
+
+map kitty_mod+right no_op
+map kitty_mod+left  no_op
+map kitty_mod+t     no_op
+map kitty_mod+q     no_op
+map shift+cmd+w     no_op
+map kitty_mod+.     no_op
+map kitty_mod+,     no_op
+map kitty_mod+alt+t no_op
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
