updates tmux/nvim splits key mappings to be defaults, % for horizontal, " for vertical

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,8 +89,8 @@ set -sg escape-time 0
 
 bind-key c new-window -c ~/projects/od-env/projects
 
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key s split-window -v -c "#{pane_current_path}"
+bind-key \" split-window -h -c "#{pane_current_path}"
+bind-key % split-window -v -c "#{pane_current_path}"
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
